kubernetes/apps/vpn-gateway/operator/network-policy-vpn-gateway.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "vpn-gateway-network-policy"
  namespace: "vpn-gateway"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-gateway
      app.kubernetes.io/name: pod-gateway 
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: vpn-apps
    toPorts:
    - ports:
      - port: "4789"
        protocol: UDP
  - toCIDR: 
    - "0.0.0.0/0"
    toPorts:
    - ports:
      - port: ${yaml_str_tag:=!!str} ${SECRET_VPN_PORT}
        protocol: "${SECRET_VPN_PROTOCOL}"
  # Allow forward of local dns requests
  - toEndpoints:
     - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
       - port: "53"
         protocol: ANY
      rules:
        dns:
          - matchPattern: "*.vpn-gateway.svc.cluster.local"
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: vpn-apps
    toPorts:
        - ports:
            - port: "4789"
              protocol: UDP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: vpn-apps
    icmps:
      - fields:
        - type: 8   # Echo Request (ping)
          family: IPv4
